{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 465,
  "lineage": "cfa1c049-0ade-dc1f-8c50-920fb2b7060f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ASG01-TG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:866340886126:targetgroup/ASG01-TG01/ac90684359f00e94",
            "arn_suffix": "targetgroup/ASG01-TG01/ac90684359f00e94",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:866340886126:targetgroup/ASG01-TG01/ac90684359f00e94",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ASG01-TG01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ASG01-TG01"
            },
            "tags_all": {
              "Name": "ASG01-TG01"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08e967959140b86b5"
          },
          "dependencies": [
            "aws_vpc.ASG01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ASG01-TG02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:866340886126:targetgroup/ASG01-TG02/ec081b6f18ec11be",
            "arn_suffix": "targetgroup/ASG01-TG02/ec081b6f18ec11be",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:866340886126:targetgroup/ASG01-TG02/ec081b6f18ec11be",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ASG01-TG02",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ASG01-TG02"
            },
            "tags_all": {
              "Name": "ASG01-TG02"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08e967959140b86b5"
          },
          "dependencies": [
            "aws_vpc.ASG01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ASG01-TG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:security-group/sg-0c099ca1ce93293a3",
            "description": "ASG01-TG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c099ca1ce93293a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ASG01-TG01",
            "name_prefix": "",
            "owner_id": "866340886126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ASG01-TG01",
              "Source": "TargetGroup-SG01"
            },
            "tags_all": {
              "Name": "ASG01-TG01",
              "Source": "TargetGroup-SG01"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e967959140b86b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ASG01-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ASG01_TG02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:security-group/sg-060f7f08ad01a40d1",
            "description": "ASG01_TG02",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060f7f08ad01a40d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ASG01_TG02",
            "name_prefix": "",
            "owner_id": "866340886126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ASG01-TG02",
              "Source": "TargetGroup-SG02"
            },
            "tags_all": {
              "Name": "ASG01-TG02",
              "Source": "TargetGroup-SG02"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e967959140b86b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ASG01-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:subnet/subnet-04b7249ce8f6e36b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.230.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b7249ce8f6e36b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "N. Virginia",
              "Name": "private-us-east-1a",
              "Owner": "TIQS",
              "Service": "Subnet"
            },
            "tags_all": {
              "Location": "N. Virginia",
              "Name": "private-us-east-1a",
              "Owner": "TIQS",
              "Service": "Subnet"
            },
            "vpc_id": "vpc-08e967959140b86b5"
          },
          "dependencies": [
            "aws_vpc.ASG01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:subnet/subnet-07801c5e143656194",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.230.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07801c5e143656194",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "N. Virginia",
              "Name": "private-us-east-1b",
              "Owner": "TIQS",
              "Service": "Subnet"
            },
            "tags_all": {
              "Location": "N. Virginia",
              "Name": "private-us-east-1b",
              "Owner": "TIQS",
              "Service": "Subnet"
            },
            "vpc_id": "vpc-08e967959140b86b5"
          },
          "dependencies": [
            "aws_vpc.ASG01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:subnet/subnet-07c951723e8d3f405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.230.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c951723e8d3f405",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866340886126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "N. Virginia",
              "Name": "private-us-east-1c",
              "Owner": "TIQS",
              "Service": "Subnet"
            },
            "tags_all": {
              "Location": "N. Virginia",
              "Name": "private-us-east-1c",
              "Owner": "TIQS",
              "Service": "Subnet"
            },
            "vpc_id": "vpc-08e967959140b86b5"
          },
          "dependencies": [
            "aws_vpc.ASG01-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ASG01-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866340886126:vpc/vpc-08e967959140b86b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/16",
            "default_network_acl_id": "acl-0a95419cf6905006d",
            "default_route_table_id": "rtb-010bee24a40699905",
            "default_security_group_id": "sg-06c0a6b3d6e174c3a",
            "dhcp_options_id": "dopt-06f049d704ea865d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08e967959140b86b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010bee24a40699905",
            "owner_id": "866340886126",
            "tags": {
              "Name": "ASG01-vpc",
              "Owner": "TIQS",
              "Service": "VPC"
            },
            "tags_all": {
              "Name": "ASG01-vpc",
              "Owner": "TIQS",
              "Service": "VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}